# Signal_Browser

./: LICENSE.txt  README.md  ToDoList & Bug Reporting  pyproject.toml
src/signal_browser/: App UUID's.csv  MmcConfig_UI.py  __about__.py  __init__.py  colorize_delegate.py  dropdowns.py  file_type.py  mmc_configDialog.py  mmc_constants.py  mmc_processes.py  my_custom_classes.py  novos_processes.py  plclog_reader.py  plclog_reader.rs  qt_dash.py  rtilog_reader.py  tdmlog_reader.py  utils.py
src/signal_browser/mmc_config/: Convert.py  MmcConfig_UI.ui  __init__.py  mmc_config.py
tests/: __init__.py
